# avs-device-sdk

./: CHANGELOG.md  README.md
Integration/: AlexaClientSDKConfig.json
KWD/: CMakeLists.txt
KWD/GPIO/include/GPIO/: GPIOKeywordDetector.h
KWD/GPIO/src/: GPIOKeywordDetector.cpp
KWD/HID/include/HID/: HIDKeywordDetector.h
KWD/HID/src/: CMakeLists.txt  HIDKeywordDetector.cpp
KWD/KWDProvider/src/: CMakeLists.txt  KeywordDetectorProvider.cpp
KWD/XMOS/: CMakeLists.txt
KWD/XMOS/GPIO/include/GPIO/: GPIOKeywordDetector.h
KWD/XMOS/GPIO/src/: CMakeLists.txt  GPIOKeywordDetector.cpp
KWD/XMOS/HID/include/HID/: HIDKeywordDetector.h
KWD/XMOS/HID/src/: CMakeLists.txt  HIDKeywordDetector.cpp
KWD/XMOS/include/XMOS/: XMOSKeywordDetector.h
KWD/XMOS/src/: CMakeLists.txt  XMOSKeywordDetector.cpp
MediaPlayer/GStreamerMediaPlayer/include/MediaPlayer/: MediaPlayer.h
MediaPlayer/GStreamerMediaPlayer/src/: MediaPlayer.cpp
SampleApp/include/SampleApp/: InteractionManager.h  SampleApplication.h  UIManager.h
SampleApp/src/: CMakeLists.txt  InteractionManager.cpp  PortAudioMicrophoneWrapper.cpp  SampleApplication.cpp  UIManager.cpp  main.cpp
applications/acsdkSensoryAdapter/acsdkKWD/src/: KWDComponent.cpp
applications/acsdkSensoryAdapter/acsdkKWDProvider/src/: SensoryRegistration.cpp
applications/acsdkSensoryAdapter/include/acsdkSensoryAdapter/Sensory/: SensoryKeywordDetector.h
applications/acsdkSensoryAdapter/src/: CMakeLists.txt  SensoryKeywordDetector.cpp
applications/acsdkXMOSAdapter/GPIO/: CMakeLists.txt
applications/acsdkXMOSAdapter/GPIO/acsdkKWD/src/: KWDComponent.cpp
applications/acsdkXMOSAdapter/GPIO/acsdkKWDProvider/src/: GPIORegistration.cpp
applications/acsdkXMOSAdapter/GPIO/include/GPIO/: GPIOKeywordDetector.h
applications/acsdkXMOSAdapter/GPIO/src/: CMakeLists.txt  GPIOKeywordDetector.cpp
applications/acsdkXMOSAdapter/HID/: CMakeLists.txt
applications/acsdkXMOSAdapter/HID/acsdkKWD/src/: KWDComponent.cpp
applications/acsdkXMOSAdapter/HID/acsdkKWDProvider/src/: HIDRegistration.cpp
applications/acsdkXMOSAdapter/HID/include/HID/: HIDKeywordDetector.h
applications/acsdkXMOSAdapter/HID/src/: CMakeLists.txt  HIDKeywordDetector.cpp
applications/acsdkXMOSAdapter/XMOS/: CMakeLists.txt
applications/acsdkXMOSAdapter/XMOS/include/XMOS/: XMOSKeywordDetector.h
applications/acsdkXMOSAdapter/XMOS/src/: CMakeLists.txt  XMOSKeywordDetector.cpp
cmakeBuild/cmake/: KeywordDetector.cmake
shared/KWD/acsdkKWDImplementations/XMOS/HID/include/HID/: HIDKeywordDetector.h
shared/KWD/acsdkKWDImplementations/include/acsdkKWDImplementations/: AbstractKeywordDetector.h
tools/Install/: pi.sh  setup.sh
